Add login with verification code
