# server/openapi.yaml
@@ -265,10 +265,15 @@ paths:
         - authMethods
       security:
         - bearer: []
-  /members/requestPasswordlessEmail:
+  /members/p/{projectId}/requestPasswordlessEmail:
     post:
       operationId: registerWithPasswordlessEmail
-      parameters: []
+      parameters:
+        - name: projectId
+          required: true
+          in: path
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -282,6 +287,32 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/RegisterResponseDto"
+      tags:
+        - members
+  /members/p/{projectId}/verifyPasswordlessEmail:
+    post:
+      operationId: verifyPasswordlessEmail
+      parameters:
+        - name: projectId
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/VerifyPasswordlessEmailDto"
+      responses:
+        "201":
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LoginMemberResponseDto"
+      tags:
+        - members
 info:
   title: AgentLabs API
   description: Build AI Agents in minutes, not months.
@@ -765,11 +796,8 @@ components:
       properties:
         email:
           type: string
-        projectId:
-          type: string
       required:
         - email
-        - projectId
     RegisterResponseDto:
       type: object
       properties:
@@ -785,3 +813,54 @@ components:
         - email
         - createdAt
         - updatedAt
+    VerifyPasswordlessEmailDto:
+      type: object
+      properties:
+        email:
+          type: string
+        code:
+          type: string
+      required:
+        - email
+        - code
+    SanitizedMemberDto:
+      type: object
+      properties:
+        id:
+          type: string
+        email:
+          type: string
+        firstName:
+          type: string
+          nullable: true
+        lastName:
+          type: string
+          nullable: true
+        verifiedAt:
+          format: date-time
+          type: string
+          nullable: true
+        createdAt:
+          format: date-time
+          type: string
+        updatedAt:
+          format: date-time
+          type: string
+      required:
+        - id
+        - email
+        - firstName
+        - lastName
+        - verifiedAt
+        - createdAt
+        - updatedAt
+    LoginMemberResponseDto:
+      type: object
+      properties:
+        accessToken:
+          type: string
+        member:
+          $ref: "#/components/schemas/SanitizedMemberDto"
+      required:
+        - accessToken
+        - member
