# server/src/members/dtos/request.passwordless-email.dto.ts
@@ -3,7 +3,4 @@ import { IsString } from 'class-validator';
 export class RequestPasswordlessEmailDto {
   @IsString()
   email: string;
-
-  @IsString()
-  projectId: string;
 }
